--- a/public/test.html
+++ b/public/test.html
@@ -652,6 +652,45 @@ const styleRowSelections = {}; // { [rowId]: string[] } 当前弹窗确定后回
 let attrPickerEditing = { rowId: null, attrKey: null };
 let attrPickerChoices = null; // Choices 实例
 
+  // 读取某一行的“样式键”，用于“具体样式本身”去重：styleType|styleValue
+function readRowStyleKey(rowEl) {
+  const type = rowEl.querySelector('td:first-child')?.dataset?.styleType || ''; // 'fontFamily'/'fontColor'...
+  let value = '';
+  const td = rowEl.querySelector('td:first-child');
+  if (!td) return `${type}|`;
+
+  // 字体：select
+  const sel = td.querySelector('select');
+  if (sel) value = sel.value || '';
+
+  // 颜色：input[type=color]
+  const color = td.querySelector('input[type="color"]');
+  if (color) value = color.value || value;
+
+  return `${type}|${value}`;
+}
+
+// 集合相等：用于判断“同样式值 + 同一组属性值”是否重复
+function isSameSet(a = [], b = []) {
+  if (a.length !== b.length) return false;
+  const sa = new Set(a), sb = new Set(b);
+  for (const v of sa) if (!sb.has(v)) return false;
+  return true;
+}
+
+// 统计同一属性(attrKey)下，除某行外已被占用的属性值（跨行去重）
+function getTakenValues(attrKey, exceptRowId) {
+  const taken = new Set();
+  const rows = document.querySelectorAll(`#styleTableBody tr[data-attr-key="${attrKey}"]`);
+  rows.forEach(tr => {
+    const rid = tr.dataset.rowId;
+    if (rid === exceptRowId) return;
+    const vals = styleRowSelections[rid] || [];
+    vals.forEach(v => taken.add(v));
+  });
+  return taken;
+}
+
 function openAttrPicker(rowId, attrKey) {
   attrPickerEditing = { rowId, attrKey };
 
@@ -673,14 +712,15 @@ function openAttrPicker(rowId, attrKey) {
     ? (getFilterOptionsForKey(attrKey) || [])
     : (window.allOptions?.[attrKey] || []);
 
-  // 预选：如果该行已有选择，弹窗打开时默认勾上
-  const pre = styleRowSelections[rowId] || [];
+  // 预选：该行已有选择
+const pre = styleRowSelections[rowId] || [];
 
-  // 这里不做跨行去重（后续你需要时可加），现在只做本行多选
-  all.forEach(v => {
-    const o = new Option(v, v, /*defaultSelected*/ false, /*selected*/ pre.includes(v));
-    sel.appendChild(o);
-  });
+// 跨行去重：排除“其它行”已选择的值，保留本行已选（避免它们被隐藏）
+const takenByOthers = getTakenValues(attrKey, rowId);
+const options = all.filter(v => pre.includes(v) || !takenByOthers.has(v));
+
+// 构建选项（保留预选状态）
+options.forEach(v => sel.appendChild(new Option(v, v, false, pre.includes(v))));
 
   // 初始化 Choices（可搜索+多选标签）
   if (window.Choices) {
@@ -700,16 +740,38 @@ function closeAttrPicker() {
 }
 
 function confirmAttrPicker() {
-  const { rowId } = attrPickerEditing;
+  const { rowId, attrKey } = attrPickerEditing;
   const sel = document.getElementById('attr-picker-options');
-
-  // 读取选择
   const values = Array.from(sel.selectedOptions).map(o => o.value);
+
+  // 1) 跨行去重校验：不允许与其它行冲突（理论上已在 open 过滤过，这里再兜底）
+  const takenByOthers = getTakenValues(attrKey, rowId);
+  const conflict = values.find(v => takenByOthers.has(v));
+  if (conflict) {
+    alert(`“${conflict}” 已被【${(window.attributeLabels?.[attrKey] || attrKey)}】的其他样式行占用，请取消或改用其他值。`);
+    return;
+  }
+
+  // 2) “具体样式本身”的去重：
+  //    在同一个 attrKey 下，不允许出现【相同样式值 + 相同一组属性值】的重复行
+  const thisRow = document.querySelector(`#styleTableBody tr[data-row-id="${rowId}"]`);
+  const thisKey = readRowStyleKey(thisRow); // e.g. 'fontFamily|"KaiTi"' 或 'fontColor|#FF0000'
+  const rows = document.querySelectorAll(`#styleTableBody tr[data-attr-key="${attrKey}"]`);
+  for (const tr of rows) {
+    if (tr.dataset.rowId === rowId) continue;
+    const otherKey = readRowStyleKey(tr);
+    if (otherKey === thisKey) {
+      const otherVals = styleRowSelections[tr.dataset.rowId] || [];
+      if (isSameSet(values, otherVals)) {
+        alert('该“样式值 + 属性值集合”组合已存在，请勿重复新增。');
+        return;
+      }
+    }
+  }
+
+  // 通过：保存并回填到行内“标签”
   styleRowSelections[rowId] = values;
-
-  // 回填为标签
   renderRowAttrChips(rowId, values);
-
   closeAttrPicker();
 }
 
