--- a/public/test.html
+++ b/public/test.html
@@ -704,6 +704,7 @@ function getTakenValues(attrKey, exceptRowId) {
 }
 
 function openAttrPicker(rowId, attrKey) {
+  // 记录当前编辑行与属性
   attrPickerEditing = { rowId, attrKey };
 
   const modal = document.getElementById('attr-picker-window');
@@ -715,26 +716,34 @@ function openAttrPicker(rowId, attrKey) {
   title.textContent = '选择应用的属性值';
   hint.textContent  = (window.attributeLabels?.[attrKey] || attrKey) + '：可多选，可搜索';
 
-  // 先清空
-  if (attrPickerChoices) { attrPickerChoices.destroy(); attrPickerChoices = null; }
+  // 清理旧实例 & 选项
+  if (attrPickerChoices) {
+    try { attrPickerChoices.destroy(); } catch (e) {}
+    attrPickerChoices = null;
+  }
   sel.innerHTML = '';
 
-  // 候选：直接复用过滤系统的获取函数
+  // 候选（复用过滤系统）
   const all = (typeof getFilterOptionsForKey === 'function')
     ? (getFilterOptionsForKey(attrKey) || [])
     : (window.allOptions?.[attrKey] || []);
 
   // 预选：该行已有选择
-const pre = styleRowSelections[rowId] || [];
+  const pre = styleRowSelections[rowId] || [];
 
-// 跨行去重：排除“其它行”已选择的值，保留本行已选（避免它们被隐藏）
-const takenByOthers = getTakenValues(attrKey, rowId);
-const options = all.filter(v => pre.includes(v) || !takenByOthers.has(v));
+  // 跨行去重：排除其它行已选，但保留本行已选以便可见/可取消
+  const takenByOthers = (typeof getTakenValues === 'function')
+    ? getTakenValues(attrKey, rowId)
+    : new Set();
+  const options = all.filter(v => pre.includes(v) || !takenByOthers.has(v));
 
-// 构建选项（保留预选状态）
-options.forEach(v => sel.appendChild(new Option(v, v, false, pre.includes(v))));
+  // 构建 <option>（保留预选状态）
+  options.forEach(v => {
+    const opt = new Option(v, v, false, pre.includes(v));
+    sel.appendChild(opt);
+  });
 
-  // 初始化 Choices（可搜索+多选标签）
+  // 初始化 Choices（可搜索+多选），并显式设置预选值 -> 立即显示 token
   if (window.Choices) {
     attrPickerChoices = new Choices(sel, {
       removeItemButton: true,
@@ -742,10 +751,23 @@ options.forEach(v => sel.appendChild(new Option(v, v, false, pre.includes(v))));
       searchPlaceholderValue: '搜索…',
       position: 'bottom'
     });
+
+    if (pre.length) {
+      // 底层 option 保持选中
+      Array.from(sel.options).forEach(o => { o.selected = pre.includes(o.value); });
+      // 让 Choices 生成可见 token（兼容不同版本 API）
+      if (typeof attrPickerChoices.setChoiceByValue === 'function') {
+        attrPickerChoices.setChoiceByValue(pre);
+      } else if (typeof attrPickerChoices.setValue === 'function') {
+        attrPickerChoices.setValue(pre);
+      }
+    }
   }
 
+  // 打开弹窗
   modal.style.display = 'block';
 }
+
 
 function closeAttrPicker() {
   document.getElementById('attr-picker-window').style.display = 'none';
@@ -790,54 +812,52 @@ function confirmAttrPicker() {
 // —— 全选：把弹窗当前下拉（已过滤后的）所有选项选中 ——
 // 兼容：有 Choices.js 时用实例；没有就设置 <option>.selected
 // 全选：把当前下拉里的所有可选项立即设为选中，并同步 Choices UI
+// 全选：立即把所有可选值选中，并同步 Choices 的 UI
 function selectAllInAttrPicker() {
   const sel = document.getElementById('attr-picker-options');
   if (!sel) return;
 
-  // 取出当前下拉里的所有可选值（排除空值）
   const vals = Array.from(sel.options).map(o => o.value).filter(Boolean);
 
-  if (window.attrPickerChoices) {
-    // 先清掉已选 token
+  if (attrPickerChoices) { // ✅ 直接用变量，不用 window.*
+    // 先清掉已有 token
     attrPickerChoices.removeActiveItems();
 
-    // 保障底层 <option> 也处于 selected 状态（有些版本的 Choices 对 programmatic change 不敏感）
+    // 保障底层 option 也同步为选中
     Array.from(sel.options).forEach(o => { o.selected = vals.includes(o.value); });
 
-    // 再让 Choices 生成 token
-    if (vals.length) attrPickerChoices.setChoiceByValue(vals);
-
-    // 可选：保持下拉展开，方便用户继续查看/搜索
-    // attrPickerChoices.showDropdown();
+    // 再让 Choices 生成 token（不同版本 API 兼容处理）
+    if (vals.length) {
+      if (typeof attrPickerChoices.setChoiceByValue === 'function') {
+        attrPickerChoices.setChoiceByValue(vals);
+      } else if (typeof attrPickerChoices.setValue === 'function') {
+        attrPickerChoices.setValue(vals);
+      }
+    }
   } else {
-    // 无 Choices 时，直接原生多选全选
+    // 没用 Choices 的退化情况
     Array.from(sel.options).forEach(o => { o.selected = true; });
   }
 
-  // 触发一次 change（有些场景需要）
+  // 触发一次 change，确保 UI/状态同步
   sel.dispatchEvent(new Event('change', { bubbles: true }));
 }
 
-// 全不选：清空已选项，并同步 Choices UI
+// 全不选：清空选中，并同步 Choices 的 UI
 function clearAttrPicker() {
   const sel = document.getElementById('attr-picker-options');
   if (!sel) return;
 
-  if (window.attrPickerChoices) {
-    // 先清掉 Choices 的 token
+  if (attrPickerChoices) {
     attrPickerChoices.removeActiveItems();
-
-    // 再把底层 <option> 选中状态清空
     Array.from(sel.options).forEach(o => { o.selected = false; });
-
-    // 可选：保持下拉展开
-    // attrPickerChoices.showDropdown();
   } else {
     Array.from(sel.options).forEach(o => { o.selected = false; });
   }
 
   sel.dispatchEvent(new Event('change', { bubbles: true }));
 }
+
 
 // 事件绑定（放在脚本末尾那堆 addEventListener 附近）
 document.getElementById('attr-picker-select-all')?.addEventListener('click', selectAllInAttrPicker);
