--- a/public/test.html
+++ b/public/test.html
@@ -455,9 +455,131 @@ const boundStyleType = {};           // { [attrKey]: 'fontFamily' | 'fontColor' 
 let stagedType = 'none';             // 下拉的临时选择（未确认前）
 // 全局：样式类型当前被哪个属性占用（如 { fontFamily: 'EventType' }）
 const styleTypeOwner = {};
+/*** 规则内存：每个属性对应一组规则行 ***/
+// 结构：styleRules = { [attrKey]: Array<{ id, type, style: {}, values: string[] }> }
+const styleRules = {};
 
+// 生成行 id（与 <tr data-row-id> 对应）
+function genId() {
+  return (crypto.randomUUID?.() || ('r_' + Date.now() + '_' + Math.random().toString(36).slice(2)));
+}
+
+// 取桶
+function ensureBucket(attrKey) {
+  if (!styleRules[attrKey]) styleRules[attrKey] = [];
+  return styleRules[attrKey];
+}
+
+// 根据 id 找规则
+function findRule(attrKey, rowId) {
+  const bucket = styleRules[attrKey] || [];
+  return bucket.find(r => r.id === rowId) || null;
+}
   // UI 下拉的值 -> 内部键：'font' => 'fontFamily'
 function uiTypeToInternal(t) { return (t === 'font') ? 'fontFamily' : t; }
+// 把某属性的所有规则渲染到表格
+function renderStyleTable(attrKey) {
+  const tbody = document.getElementById('styleTableBody');
+  if (!tbody) return;
+  tbody.innerHTML = '';
+
+  const rules = styleRules[attrKey] || [];
+  rules.forEach(rule => renderRuleRow(attrKey, rule));
+}
+
+// 渲染单行（可复用：新增/修改后都可以只重绘本行）
+function renderRuleRow(attrKey, rule) {
+  const tbody = document.getElementById('styleTableBody');
+  if (!tbody) return;
+
+  const tr = document.createElement('tr');
+  tr.dataset.rowId  = rule.id;
+  tr.dataset.attrKey = attrKey;
+
+  // —— 左：样式控件
+  const tdContent = document.createElement('td');
+  tdContent.dataset.styleType = rule.type;
+  const ctrl = buildStyleControl(rule.type); // 你已有的构造 UI
+  tdContent.appendChild(ctrl);
+  tr.appendChild(tdContent);
+
+  // 初始化控件的“当前值” + 监听修改写回内存
+  if (rule.type === 'fontFamily') {
+    const sel = tdContent.querySelector('select');
+    if (sel) {
+      sel.value = rule.style.fontFamily || '';
+      sel.addEventListener('change', () => {
+        rule.style.fontFamily = sel.value || '';
+      });
+    }
+  } else if (
+    rule.type === 'fontColor' ||
+    rule.type === 'borderColor' ||
+    rule.type === 'backgroundColor' ||
+    rule.type === 'lineColor'
+  ) {
+    const color = tdContent.querySelector('input[type="color"]');
+    const hex   = tdContent.querySelector('input[type="text"]');
+
+    const current = rule.style[rule.type] || '#000000';
+    if (color) color.value = current;
+    if (hex)   hex.value   = current;
+
+    // 同步两边并写回
+    if (color && hex) {
+      color.addEventListener('input', () => {
+        hex.value = color.value.toUpperCase();
+        rule.style[rule.type] = color.value.toUpperCase();
+      });
+      hex.addEventListener('change', () => {
+        // 已在 buildStyleControl 里做过规范化，这里只写回
+        rule.style[rule.type] = hex.value.toUpperCase();
+        if (color.value.toUpperCase() !== hex.value.toUpperCase()) {
+          color.value = hex.value;
+        }
+      });
+    }
+  }
+
+  // —— 中：已选标签 + “添加/修改属性”
+  const tdAttr = document.createElement('td');
+
+  const chips = document.createElement('div');
+  chips.className = 'attr-chips';
+  chips.style.minHeight = '28px';
+  tdAttr.appendChild(chips);
+
+  const editBtn = document.createElement('button');
+  editBtn.type = 'button';
+  editBtn.textContent = '添加/修改属性';
+  editBtn.style.marginLeft = '8px';
+  editBtn.addEventListener('click', () => {
+    openAttrPicker(rule.id, attrKey);
+  });
+  tdAttr.appendChild(editBtn);
+
+  tr.appendChild(tdAttr);
+
+  // 首次渲染标签
+  renderRowAttrChips(rule.id, rule.values || []);
+
+  // —— 右：删除该行
+  const tdAction = document.createElement('td');
+  const delBtn = document.createElement('button');
+  delBtn.type = 'button';
+  delBtn.textContent = '×';
+  delBtn.title = '删除该样式行';
+  delBtn.addEventListener('click', () => {
+    const bucket = styleRules[attrKey] || [];
+    const idx = bucket.findIndex(r => r.id === rule.id);
+    if (idx >= 0) bucket.splice(idx, 1);
+    tr.remove();
+  });
+  tdAction.appendChild(delBtn);
+  tr.appendChild(tdAction);
+
+  tbody.appendChild(tr);
+}
 
 // 根据占用关系，刷新“样式类型”下拉的可用性和提示文案
 function refreshStyleTypeOptions() {
@@ -496,11 +618,9 @@ function openStyleWindow(attr) {
   const addBtn    = document.getElementById('add-style-btn');
   const hint      = document.getElementById('bound-type-hint');
 
-  // 下拉复位到 none（防止误绑定）
   typeSel.value = 'none';
   stagedType = 'none';
 
-  // 清空当前窗口里的临时行（不影响已绑定类型）
   tbody.innerHTML = '';
 
   const bound = boundStyleType[attr] || 'none';
@@ -516,9 +636,10 @@ function openStyleWindow(attr) {
     if (addBtn)    addBtn.disabled = true;
   }
 
-  // ✅ 根据“已被其它属性占用”的类型禁用选项 + 标注
-  refreshStyleTypeOptions();
+  // ✅ 用内存里的规则重建表格
+  renderStyleTable(attr);
 }
+
 
 
   function onStyleTypeChange() {
@@ -681,62 +802,66 @@ function addStyleRow() {
     alert('请先选择样式类型并“确认绑定”。');
     return;
   }
-  const tbody = document.getElementById('styleTableBody');
-  if (!tbody) return;
 
-  const tr = document.createElement('tr');
-  const rowId = (crypto.randomUUID?.() || ('row-' + Date.now() + Math.random()));
-  tr.dataset.rowId  = rowId;
-  tr.dataset.attrKey = currentStyleAttr; // 记录本行对应的属性类别
+  const bucket = ensureBucket(currentStyleAttr);
+  const rule = {
+    id: genId(),
+    type: bound,            // 'fontFamily' | 'fontColor' | ...
+    style: {},              // 样式值（字体名 / 颜色 HEX）
+    values: []              // 应用到的“属性值”集合（多选）
+  };
 
-  // —— 左：样式值控件（仅 UI，不落库、不应用）
-  const tdContent = document.createElement('td');
-  tdContent.dataset.styleType = bound;      // 记录本行样式类型（后续应用阶段可用）
-  const ctrl = buildStyleControl(bound);    // 你已有的函数
-  tdContent.appendChild(ctrl);
-  tr.appendChild(tdContent);
+  // 给新行一个合理的默认值，便于直观可见
+  if (bound === 'fontFamily') {
+    rule.style.fontFamily = ''; // 让用户自己选
+  } else {
+    rule.style[bound] = '#000000'; // 颜色默认黑
+  }
 
-  // —— 中：已选标签 + “添加/修改属性”按钮
-  const tdAttr = document.createElement('td');
-
-  const chips = document.createElement('div');
-  chips.className = 'attr-chips';
-  chips.style.minHeight = '28px';
-  chips.innerHTML = '<span style="color:#999;">（未选择）</span>';
-
-  const editBtn = document.createElement('button');
-  editBtn.type = 'button';
-  editBtn.textContent = '添加/修改属性';
-  editBtn.style.marginLeft = '8px';
-  editBtn.addEventListener('click', () => {
-    openAttrPicker(rowId, currentStyleAttr);
-  });
-
-  tdAttr.appendChild(chips);
-  tdAttr.appendChild(editBtn);
-  tr.appendChild(tdAttr);
-
-  // —— 右：删除按钮
-  const tdAction = document.createElement('td');
-  const delBtn = document.createElement('button');
-  delBtn.type = 'button';
-  delBtn.textContent = '×';
-  delBtn.title = '删除该样式行';
-  delBtn.addEventListener('click', () => {
-    // 清理本行已选记录
-    delete styleRowSelections[rowId];
-    tr.remove();
-  });
-  tdAction.appendChild(delBtn);
-  tr.appendChild(tdAction);
-
-  tbody.appendChild(tr);
+  bucket.push(rule);
+  renderRuleRow(currentStyleAttr, rule);
 }
+
 
 /************ 样式行-属性选择（仅交互，先不应用 CSS） ************/
 const styleRowSelections = {}; // { [rowId]: string[] } 当前弹窗确定后回填展示所用
 let attrPickerEditing = { rowId: null, attrKey: null };
-let attrPickerChoices = null; // Choices 实例
+let attrPickerChoices = null;
+
+function openAttrPicker(rowId, attrKey) {
+  attrPickerEditing = { rowId, attrKey };
+
+  const modal = document.getElementById('attr-picker-window');
+  const title = document.getElementById('attr-picker-title');
+  const hint  = document.getElementById('attr-picker-hint');
+  const sel   = document.getElementById('attr-picker-options');
+
+  title.textContent = '选择应用的属性值';
+  hint.textContent  = (window.attributeLabels?.[attrKey] || attrKey) + '：可多选，可搜索';
+
+  if (attrPickerChoices) { attrPickerChoices.destroy(); attrPickerChoices = null; }
+  sel.innerHTML = '';
+
+  const rule = findRule(attrKey, rowId);
+  const pre  = (rule?.values || []);
+
+  const all = (typeof getFilterOptionsForKey === 'function')
+    ? (getFilterOptionsForKey(attrKey) || [])
+    : (window.allOptions?.[attrKey] || []);
+
+  all.forEach(v => sel.appendChild(new Option(v, v, false, pre.includes(v))));
+
+  if (window.Choices) {
+    attrPickerChoices = new Choices(sel, {
+      removeItemButton: true,
+      shouldSort: false,
+      searchPlaceholderValue: '搜索…',
+      position: 'bottom'
+    });
+  }
+
+  modal.style.display = 'block';
+}
 
   // 读取某一行的“样式键”，用于“具体样式本身”去重：styleType|styleValue
 function readRowStyleKey(rowEl) {
@@ -777,70 +902,7 @@ function getTakenValues(attrKey, exceptRowId) {
   return taken;
 }
 
-function openAttrPicker(rowId, attrKey) {
-  // 记录当前编辑行与属性
-  attrPickerEditing = { rowId, attrKey };
 
-  const modal = document.getElementById('attr-picker-window');
-  const title = document.getElementById('attr-picker-title');
-  const hint  = document.getElementById('attr-picker-hint');
-  const sel   = document.getElementById('attr-picker-options');
-
-  // 标题/提示
-  title.textContent = '选择应用的属性值';
-  hint.textContent  = (window.attributeLabels?.[attrKey] || attrKey) + '：可多选，可搜索';
-
-  // 清理旧实例 & 选项
-  if (attrPickerChoices) {
-    try { attrPickerChoices.destroy(); } catch (e) {}
-    attrPickerChoices = null;
-  }
-  sel.innerHTML = '';
-
-  // 候选（复用过滤系统）
-  const all = (typeof getFilterOptionsForKey === 'function')
-    ? (getFilterOptionsForKey(attrKey) || [])
-    : (window.allOptions?.[attrKey] || []);
-
-  // 预选：该行已有选择
-  const pre = styleRowSelections[rowId] || [];
-
-  // 跨行去重：排除其它行已选，但保留本行已选以便可见/可取消
-  const takenByOthers = (typeof getTakenValues === 'function')
-    ? getTakenValues(attrKey, rowId)
-    : new Set();
-  const options = all.filter(v => pre.includes(v) || !takenByOthers.has(v));
-
-  // 构建 <option>（保留预选状态）
-  options.forEach(v => {
-    const opt = new Option(v, v, false, pre.includes(v));
-    sel.appendChild(opt);
-  });
-
-  // 初始化 Choices（可搜索+多选），并显式设置预选值 -> 立即显示 token
-  if (window.Choices) {
-    attrPickerChoices = new Choices(sel, {
-      removeItemButton: true,
-      shouldSort: false,
-      searchPlaceholderValue: '搜索…',
-      position: 'bottom'
-    });
-
-    if (pre.length) {
-      // 底层 option 保持选中
-      Array.from(sel.options).forEach(o => { o.selected = pre.includes(o.value); });
-      // 让 Choices 生成可见 token（兼容不同版本 API）
-      if (typeof attrPickerChoices.setChoiceByValue === 'function') {
-        attrPickerChoices.setChoiceByValue(pre);
-      } else if (typeof attrPickerChoices.setValue === 'function') {
-        attrPickerChoices.setValue(pre);
-      }
-    }
-  }
-
-  // 打开弹窗
-  modal.style.display = 'block';
-}
 
 
 function closeAttrPicker() {
@@ -850,15 +912,15 @@ function closeAttrPicker() {
 function confirmAttrPicker() {
   const { rowId, attrKey } = attrPickerEditing;
   const sel = document.getElementById('attr-picker-options');
-  const values = Array.from(sel.selectedOptions).map(o => o.value);
+  const vals = Array.from(sel.selectedOptions).map(o => o.value);
 
-  // 1) 跨行去重校验：不允许与其它行冲突（理论上已在 open 过滤过，这里再兜底）
-  const takenByOthers = getTakenValues(attrKey, rowId);
-  const conflict = values.find(v => takenByOthers.has(v));
-  if (conflict) {
-    alert(`“${conflict}” 已被【${(window.attributeLabels?.[attrKey] || attrKey)}】的其他样式行占用，请取消或改用其他值。`);
-    return;
+  const rule = findRule(attrKey, rowId);
+  if (rule) {
+    rule.values = vals;
+    renderRowAttrChips(rowId, vals);
   }
+  document.getElementById('attr-picker-window').style.display = 'none';
+}
 
   // 2) “具体样式本身”的去重：
   //    在同一个 attrKey 下，不允许出现【相同样式值 + 相同一组属性值】的重复行
@@ -945,17 +1007,19 @@ function renderRowAttrChips(rowId, values) {
   if (!box) return;
 
   box.innerHTML = '';
-  if (!values || values.length === 0) {
+  const list = Array.isArray(values) ? values : [];
+  if (list.length === 0) {
     box.innerHTML = '<span style="color:#999;">（未选择）</span>';
     return;
   }
-  values.forEach(v => {
+  list.forEach(v => {
     const tag = document.createElement('span');
     tag.textContent = v;
     tag.style.cssText = 'display:inline-block;padding:2px 6px;margin:2px;border:1px solid #ccc;border-radius:10px;font-size:12px;';
     box.appendChild(tag);
   });
 }
+
 
 // 绑定弹窗按钮
 document.getElementById('attr-picker-confirm')?.addEventListener('click', confirmAttrPicker);
